# boombox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/input/: audio_client.hpp  except.cpp  except.hpp  pipewire_client.cpp  pipewire_client.hpp
src/lib/: event_manager.hpp
src/platform/: filesystem.cpp  filesystem.hpp  logger.cpp  logger.hpp
src/ui/: assert.hpp  display-context.cpp  display-context.hpp  display_context.cpp  display_context.hpp  except.cpp  except.hpp  renderer.cpp  renderer.hpp  sprite_material.cpp  sprite_material.hpp
src/utils/: event_manager.cpp  event_manager.hpp
test/: CMakeLists.txt  test_pipewire.cpp
